<resources>

    <string name="app_name">Snag</string>
    
    <string name="action_new">New spam SMS</string>
    <string name="action_about">About</string>
    <string name="action_rate">Rate</string>
    <string name="action_feedback">Send feedback</string>
        
    <string name="date">Date</string>
    <string name="from">From</string>
    <string name="message_body">Message body</string>
    <string name="got_it">OK, got it!</string>
    <string name="dot">.</string>
    <string name="launcher_text_a">Snag filters spam SMS by intelligently matching special words.</string>
    <string name="launcher_text_b">To make Snag better, when you get a message you would like to subsequently filter, simply add it to Snag with the + icon.</string>
        
        
</resources>
