<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="co.snag.android.HomeActivity" >

    <item android:id="@+id/action_new"
          android:icon="@drawable/ic_action_new"
          android:title="@string/action_new"
          app:showAsAction="always" />
    
    <item android:id="@+id/action_feedback"
          android:title="@string/action_feedback"
          app:showAsAction="never" />
          
    <item android:id="@+id/action_rate"
          android:title="@string/action_rate"
          app:showAsAction="never" />
          
    <item android:id="@+id/action_about"
          android:title="@string/action_about"
          app:showAsAction="never" />
    
</menu>