<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    >
	
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
		<TextView
		    android:id="@+id/sms_from"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/from"
	        android:textColor="@color/black"
		    android:textSize="20sp"
		    android:paddingTop="8dp"
		    android:paddingBottom="4dp"
		/>
			
		<TextView
		    android:id="@+id/sms_date"
		    android:layout_alignParentRight="true"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/date"
	        android:textColor="@color/gray"
		    android:textSize="14sp"
		    android:paddingTop="8dp"
		    android:paddingBottom="4dp"
		/>
		
    </RelativeLayout>
	
	<TextView
	    android:id="@+id/sms_body"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/message_body"
	    android:maxLines="1"
	    android:ellipsize="end"
        android:textColor="@color/gray_deep"
	    android:textSize="16sp"
	    android:paddingTop="4dp"
	    android:paddingBottom="8dp"
	/>
	
</LinearLayout>